--- a/po/it.po
+++ b/po/it.po
@@ -1228,10 +1228,9 @@ msgid "Sunday"
 msgstr "Domenica"
 
 #: js/messages.php:123
-#, fuzzy
 #| msgid "Mon"
 msgid "Monday"
-msgstr "Lun"
+msgstr "Lunedì"
 
 #: js/messages.php:124
 #, fuzzy
