--- a/po/it.po
+++ b/po/it.po
@@ -1233,10 +1233,9 @@ msgid "Monday"
 msgstr "Lunedì"
 
 #: js/messages.php:124
-#, fuzzy
 #| msgid "Tue"
 msgid "Tuesday"
-msgstr "Mar"
+msgstr "Martedì"
 
 #: js/messages.php:125
 msgid "Wednesday"
