Translation update done using Pootle.

--- a/po/it.po
+++ b/po/it.po
@@ -1243,7 +1243,7 @@ msgstr "Mercoledì"
 
 #: js/messages.php:126
 msgid "Thursday"
-msgstr ""
+msgstr "Giovedì"
 
 #: js/messages.php:127
 #, fuzzy
