--- a/po/it.po
+++ b/po/it.po
@@ -1252,7 +1252,7 @@ msgstr "Venerdì"
 
 #: js/messages.php:128
 msgid "Saturday"
-msgstr ""
+msgstr "Sabato"
 
 #. l10n: Short week day name
 #: js/messages.php:132 libraries/common.lib.php:1580
