Translation update done using Pootle.

--- a/po/it.po
+++ b/po/it.po
@@ -1291,10 +1291,9 @@ msgstr "Sab"
 
 #. l10n: Minimal week day name
 #: js/messages.php:148
-#, fuzzy
 #| msgid "Sun"
 msgid "Su"
-msgstr "Dom"
+msgstr "Do"
 
 #. l10n: Minimal week day name
 #: js/messages.php:150
