--- a/po/it.po
+++ b/po/it.po
@@ -1297,10 +1297,9 @@ msgstr "Do"
 
 #. l10n: Minimal week day name
 #: js/messages.php:150
-#, fuzzy
 #| msgid "Mon"
 msgid "Mo"
-msgstr "Lun"
+msgstr "Lu"
 
 #. l10n: Minimal week day name
 #: js/messages.php:152
