Translation update done using Pootle.

--- a/po/it.po
+++ b/po/it.po
@@ -1303,10 +1303,9 @@ msgstr "Lu"
 
 #. l10n: Minimal week day name
 #: js/messages.php:152
-#, fuzzy
 #| msgid "Tue"
 msgid "Tu"
-msgstr "Mar"
+msgstr "Ma"
 
 #. l10n: Minimal week day name
 #: js/messages.php:154
