Translation update done using Pootle.

--- a/po/it.po
+++ b/po/it.po
@@ -1315,10 +1315,9 @@ msgstr "Me"
 
 #. l10n: Minimal week day name
 #: js/messages.php:156
-#, fuzzy
 #| msgid "Thu"
 msgid "Th"
-msgstr "Gio"
+msgstr "Gi"
 
 #. l10n: Minimal week day name
 #: js/messages.php:158
