--- a/po/it.po
+++ b/po/it.po
@@ -1321,10 +1321,9 @@ msgstr "Gi"
 
 #. l10n: Minimal week day name
 #: js/messages.php:158
-#, fuzzy
 #| msgid "Fri"
 msgid "Fr"
-msgstr "Ven"
+msgstr "Ve"
 
 #. l10n: Minimal week day name
 #: js/messages.php:160
