--- a/po/it.po
+++ b/po/it.po
@@ -1327,10 +1327,9 @@ msgstr "Ve"
 
 #. l10n: Minimal week day name
 #: js/messages.php:160
-#, fuzzy
 #| msgid "Sat"
 msgid "Sa"
-msgstr "Sab"
+msgstr "Sa"
 
 #. l10n: Column header for week of the year in calendar
 #: js/messages.php:162
