Translation update done using Pootle.

--- a/po/it.po
+++ b/po/it.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-22 14:11+0200\n"
-"PO-Revision-Date: 2010-05-23 01:27+0200\n"
+"PO-Revision-Date: 2010-05-23 01:28+0200\n"
 "Last-Translator: Fabio <fantonifabio@tiscali.it>\n"
 "Language-Team: italian <it@li.org>\n"
 "Language: it\n"
@@ -1343,10 +1343,9 @@ msgid "Hour"
 msgstr "Ora"
 
 #: js/messages.php:165
-#, fuzzy
 #| msgid "in use"
 msgid "Minute"
-msgstr "in uso"
+msgstr "Minuto"
 
 #: js/messages.php:166
 #, fuzzy
