Translation update done using Pootle.

--- a/po/it.po
+++ b/po/it.po
@@ -1348,10 +1348,9 @@ msgid "Minute"
 msgstr "Minuto"
 
 #: js/messages.php:166
-#, fuzzy
 #| msgid "per second"
 msgid "Second"
-msgstr "al secondo"
+msgstr "Secondo"
 
 #: libraries/Config.class.php:1015 libraries/messages.inc.php:334
 msgid "Font size"
