Translation update done using Pootle.

--- a/po/it.po
+++ b/po/it.po
@@ -2215,10 +2215,9 @@ msgid "zipped"
 msgstr "zippato"
 
 #: libraries/display_export.lib.php:253
-#, fuzzy
 #| msgid "\"gzipped\""
 msgid "gzipped"
-msgstr "\"compresso con gzip\""
+msgstr "gzippato"
 
 #: libraries/display_export.lib.php:259
 #, fuzzy
