--- a/po/it.po
+++ b/po/it.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-22 14:11+0200\n"
-"PO-Revision-Date: 2010-05-23 01:31+0200\n"
+"PO-Revision-Date: 2010-05-23 01:32+0200\n"
 "Last-Translator: Fabio <fantonifabio@tiscali.it>\n"
 "Language-Team: italian <it@li.org>\n"
 "Language: it\n"
@@ -3051,7 +3051,7 @@ msgstr "Usa dati esadecimali per BLOB"
 
 #: libraries/export/sql.php:121 libraries/messages.inc.php:1016
 msgid "Export time in UTC"
-msgstr ""
+msgstr "Esporta ora in UTC"
 
 #: libraries/export/sql.php:123 libraries/messages.inc.php:1015
 msgid "Export type"
