--- a/po/it.po
+++ b/po/it.po
@@ -3119,7 +3119,7 @@ msgstr ""
 
 #: libraries/export/xml.php:31 libraries/messages.inc.php:1245
 msgid "Export functions"
-msgstr ""
+msgstr "Funzioni di esportazione"
 
 #: libraries/export/xml.php:33 libraries/messages.inc.php:1246
 msgid "Export procedures"
