--- a/po/it.po
+++ b/po/it.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-22 14:11+0200\n"
-"PO-Revision-Date: 2010-05-23 01:32+0200\n"
+"PO-Revision-Date: 2010-05-23 01:33+0200\n"
 "Last-Translator: Fabio <fantonifabio@tiscali.it>\n"
 "Language-Team: italian <it@li.org>\n"
 "Language: it\n"
@@ -3126,9 +3126,8 @@ msgid "Export procedures"
 msgstr "Esporta procedure"
 
 #: libraries/export/xml.php:35 libraries/messages.inc.php:1248
-#, fuzzy
 msgid "Export tables"
-msgstr "Tipo di esportazione"
+msgstr "Esporta tabelle"
 
 #: libraries/export/xml.php:37 libraries/messages.inc.php:1249
 #, fuzzy
