--- a/po/it.po
+++ b/po/it.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-22 14:11+0200\n"
-"PO-Revision-Date: 2010-05-23 01:35+0200\n"
+"PO-Revision-Date: 2010-05-23 01:36+0200\n"
 "Last-Translator: Fabio <fantonifabio@tiscali.it>\n"
 "Language-Team: italian <it@li.org>\n"
 "Language: it\n"
@@ -4995,9 +4995,8 @@ msgstr "Ricarica"
 
 #: libraries/messages.inc.php:745 libraries/server_synchronize.lib.php:1345
 #: libraries/server_synchronize.lib.php:1371
-#, fuzzy
 msgid "Remote server"
-msgstr "Nuovo server"
+msgstr "Server remoto"
 
 #: libraries/messages.inc.php:747 tbl_operations.php:676
 msgid "Remove partitioning"
